--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -12,7 +12,7 @@
 
 .carousel-description {
     flex: 5;
-    margin-right: 10px;
+    margin-right: 50px;
     margin-left: 50px;
 }
 
